Bug 100877 - vulkan/tests/block_pool_no_free regression
Summary: vulkan/tests/block_pool_no_free regression
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Vulkan/intel (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Intel 3D Bugs Mailing List
QA Contact: Intel 3D Bugs Mailing List
URL:
Whiteboard:
Keywords: bisected, have-backtrace, regression
Depends on:
Blocks:
 
Reported: 2017-04-28 21:20 UTC by Vinson Lee
Modified: 2017-05-02 14:19 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Vinson Lee 2017-04-28 21:20:58 UTC
mesa: 27469aa72eb301e7c91f237719077372292e3704 (master 17.2.0-devel)

$ ./vulkan/tests/block_pool_no_free 
Segmentation fault (core dumped)

Program received signal SIGSEGV, Segmentation fault.
anv_block_pool_grow (pool=pool@entry=0x7fffffffc830, state=state@entry=0x7fffffffc8a0) at vulkan/anv_allocator.c:509
509	   if (pool->device->instance->physicalDevice.has_exec_async)
(gdb) bt
#0  anv_block_pool_grow (pool=pool@entry=0x7fffffffc830, state=state@entry=0x7fffffffc8a0)
    at vulkan/anv_allocator.c:509
#1  0x000055555557766e in anv_block_pool_init (pool=0x7fffffffc830, device=<optimized out>, 
    block_size=<optimized out>) at vulkan/anv_allocator.c:291
#2  0x0000555555576b61 in run_test () at vulkan/tests/block_pool_no_free.c:114
#3  0x0000555555575207 in main (argc=<optimized out>, argv=<optimized out>) at vulkan/tests/block_pool_no_free.c:143
(gdb) frame 0
#0  anv_block_pool_grow (pool=pool@entry=0x7fffffffc830, state=state@entry=0x7fffffffc8a0)
    at vulkan/anv_allocator.c:509
509	   if (pool->device->instance->physicalDevice.has_exec_async)
(gdb) print pool->device->instance
$1 = (struct anv_instance *) 0x0
Comment 1 Vinson Lee 2017-05-01 23:29:52 UTC
35e626bd0e59e7ce9fd97ccef66b2468c09206a4 is the first bad commit
commit 35e626bd0e59e7ce9fd97ccef66b2468c09206a4
Author: Jason Ekstrand <jason.ekstrand@intel.com>
Date:   Thu Apr 13 16:30:19 2017 -0700

    anv: Set EXEC_OBJECT_ASYNC when available
    
    Reviewed-by: Chad Versace <chadversary@chromium.org>

:040000 040000 d3aaaf684858986164538d35699174f2a8e4b2ff 5f39384544662766e616fdd3982f40cb9e5f08ef M	src
bisect run success
Comment 2 Jason Ekstrand 2017-05-01 23:51:08 UTC
Patch is on the list to fix the bug:

https://patchwork.freedesktop.org/patch/153926/
Comment 3 Jason Ekstrand 2017-05-02 14:19:31 UTC
Patch pushed.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.